# aria2_rpc_client

./: .flake8  .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: linters.yml
aria2_rpc_client/: __init__.py  client.py  connection.py  exceptions.py  options.py  types.py
