[tool.poetry]
name = "aria2_rpc_client"
version = "0.2.0"
description = "Aria2 RPC Client"
authors = ["Özkan ŞEN <ozkansen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["aria2_rpc_client"]
line_length = 88
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
virtual_env = ".venv"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    \.vscode
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
follow_imports = "silent"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_any_generics = true
disallow_untyped_defs = true
